@@ -1,0 +1,31 @@
+package cuke4duke.annotation;
+
+import cuke4duke.internal.java.annotation.StepDef;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+public class English {
+    @Retention(RetentionPolicy.RUNTIME)
+    @Target(ElementType.METHOD)
+    @StepDef
+    public static @interface Given {
+        public abstract String value();
+    }
+
+    @Retention(RetentionPolicy.RUNTIME)
+    @Target(ElementType.METHOD)
+    @StepDef
+    public static @interface When {
+        public abstract String value();
+    }
+
+    @Retention(RetentionPolicy.RUNTIME)
+    @Target(ElementType.METHOD)
+    @StepDef
+    public static @interface Then {
+        public abstract String value();
+    }
+}
