@@ -3,7 +3,7 @@ package simple;
 
 import cuke4duke.StepMother;
 import cuke4duke.Steps;
-import cuke4duke.When;
+import cuke4duke.annotation.English.*;
 
 public class CallingSteps extends Steps {
     public CallingSteps(StepMother stepMother) {
