@@ -3,11 +3,9 @@ package simple;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
+import cuke4duke.annotation.English.*;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import cuke4duke.Given;
-import cuke4duke.Then;
-import cuke4duke.When;
 import cuke4duke.spring.StepDefinitions;
 
 @StepDefinitions
